--- a/stylesheet.css
+++ b/stylesheet.css
@@ -86,17 +86,14 @@ header h2
 nav li
 {
 	display: inline;
-	margin: 0px;
-	padding: 0px;
 }
 
 nav li a 
 {
 	margin-right: 20px;
-	color: black;
 	text-decoration: none;
-	padding: 5px;
     background-color: #000000; 
+	font-size: 20px;
 }
 
 nav ul
@@ -113,6 +110,9 @@ nav li a:hover
 .active
 {
 	background-color: white;
+	color: black;
+	border: solid 1px black;
+	font-size: 20px;
 }
 
 .divs
@@ -175,5 +175,26 @@ footer aside ul
 
 footer aside
 {
-	border-top: solid 1px black;
+	border-top: solid 1px black; 
+}
+
+table
+{
+  border-collapse: collapse;
+  border: 1px solid black;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+th
+{
+  border: 1px solid black;
+  padding: 5px;
+}
+
+td
+{
+	border-left: 1px solid black;
+	text-align: center;
+	padding: 5px;
 }
