--- a/stylesheet.css
+++ b/stylesheet.css
@@ -113,6 +113,7 @@ nav li a:hover
 	color: black;
 	border: solid 1px black;
 	font-size: 20px;
+	padding: 3px 3px;
 }
 
 .divs
@@ -121,7 +122,6 @@ nav li a:hover
 	margin-left: auto;
 	margin-right: auto;
 	width: 67%;
-	padding: 0px;
 	margin: 0px;
 	position: fixed;
 	top: 0;
@@ -194,7 +194,7 @@ th
 
 td
 {
-	border-left: 1px solid black;
+	border: 1px solid black; 
 	text-align: center;
 	padding: 5px;
 }
