--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,16 +1,8 @@
-.text
+/* Classes */
+
+.text-img
 {
 float: left;
-}
-
-h1
-{
-text-align: center;
-}
-
-h3
-{
-font-size: 1.5em;
 }
 
 .para1
@@ -35,14 +27,6 @@ float: left;
 background-color: pink;
 }
 
-body
-{
-font-size: 17px;
-margin-left: 250px;
-margin-right: 250px;
-word-break: keep-all;
-}
-
 .underline
 {
 text-decoration: underline;
@@ -53,74 +37,9 @@ text-decoration: underline;
 list-style: none;
 }
 
-article p ul li a:link
-{
-color: black;
-}
-
-article p ul li a:hover
-{
-color: blue;
-}
-
-article p ul li a:visited
-{
-color: purple;
-}
-
 .center
 {
 	text-align: center;
-}
-
-header h2
-{
-	text-decoration: underline; 
-	background-color: black;
-	color: white;
-	padding: 5px;
-	text-align: center;
-	height: auto;
-}
-
-nav
-{
-	width: 420px;
-	margin-right: auto;
-	margin-left: auto;
-}
-
-nav ul
-{
-	list-style-type: none;	
-}
-
-nav ul li 
-{
-	display: inline;
-	font-size: 20px;
-	
-}
-
-nav ul li a 
-{
-	background-color: #000000;
-	margin-right: 10px;
-	text-decoration: none;
-	color: white;
-	padding: 3px;
-}
-
-nav li a:hover
-{
-	opacity: 0.3;
-}
-
-.active
-{
-	background-color: white;
-	color: black;
-	border: 1px solid black;
 }
 
 .divs
@@ -143,11 +62,6 @@ nav li a:hover
 	height: 100px;
 }
 
-section article
-{
-	border-top: solid 1px black;
-}	
-
 .post-p
 {
 	border-top: solid 1px black;
@@ -168,35 +82,187 @@ section article
 	padding-top: 20px;
 }
 
-footer aside ul li
+.back-ul
+{
+	list-style-type: none;
+	float: right;
+}
+
+.back-li
+{
+	
+}
+
+.back-a
+{
+	background-color: #000000;
+	text-decoration: none;
+	color: white;
+	padding: 3px;
+}
+
+.back-a:hover
+{
+	opacity: 0.3;
+	color: white;
+}
+
+/* --- */
+
+/* ID Tag Classes */
+
+
+
+/* --- */
+
+/* Selector Tag Classes */
+
+body
+{
+	font-size: 17px;
+	margin-left: 250px;
+	margin-right: 250px;
+	word-break: keep-all;
+	font-family: arial;
+}
+
+h1
+{
+	text-align: center;
+}
+
+h3
+{
+	font-size: 1.5em;
+}
+
+header h2
+{
+	text-decoration: underline; 
+	background-color: black;
+	color: white;
+	padding: 5px;
+	text-align: center;
+	height: auto;
+}
+
+p 
+{
+	color: black;
+}
+
+progress
+{
+	-webkit-appearance: none;
+}
+
+progress[value]::-webkit-progress-bar /* -webkit-progress-bar = (the container) */
+{
+	background-color: #eee;
+	border-radius: 5px;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
+}
+
+progress[value]::-webkit-progress-value 
+{
+	border-radius: 5px;
+	background-color: black;
+}
+
+/* --- */
+
+/* Article Content Styling */
+
+article p ul li a:link
+{
+	color: black;
+}
+
+article p ul li a:hover
+{
+	color: blue;
+}
+
+article p ul li a:visited
+{
+	color: purple;
+}
+
+/* --- */
+
+/* Navbar Content Styling */
+
+nav
+{
+	margin-right: auto;
+	margin-left: auto;
+	width: 433px;
+}
+
+nav ul
+{
+	list-style-type: none;	
+}
+
+nav ul li 
 {
 	display: inline;
-	font-size: 12px; 
-	padding-right: 5px;
+	font-size: 20px;
 }
 
-footer aside ul
+nav ul li a 
 {
-	padding-top: 5px; 
+	background-color: #000000;
+	margin-right: 10px;
+	text-decoration: none;
+	color: white;
+	padding: 3px;
 }
 
-footer aside
+nav li a:hover
 {
-	border-top: solid 1px black; 
+	opacity: 0.3;
+	color: white;
 }
+
+.active
+{
+	background-color: white;
+	color: black;
+	border: 1px solid black;
+}
+
+.active:hover
+{
+	opacity: 1;
+	color: black;
+}
+
+/* --- */
+
+/* Section Content Styling*/
+
+section article
+{
+	border-top: solid 1px black;
+}	
+
+/* --- */
+
+/* Dashboard */
 
 table
 {
-  border-collapse: collapse;
-  border: 1px solid black;
-  margin-right: auto;
-  margin-left: auto;
+	border-collapse: collapse;
+    border: 1px solid black;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 th
 {
-  border: 1px solid black;
-  padding: 5px;
+    border: 1px solid black;
+	padding: 5px;
 }
 
 td
@@ -206,6 +272,10 @@ td
 	padding: 5px;
 }
 
+/* --- */
+
+/* Main Content Styling */
+
 main article ul li a 
 {
 	color: black;
@@ -214,6 +284,27 @@ main article ul li a
 main article ul li a:hover
 {
 	color: pink;
+}
+
+/* --- */
+
+/* Footer Content Styling */
+
+.footer-aside 
+{
+	border-top: solid 1px black;
+}
+
+footer aside ul
+{
+	padding-top: 5px; 
+}
+
+footer aside ul li
+{
+	display: inline;
+	font-size: 10px; 
+	padding-right: 5px;
 }
 
 footer aside ul li a
@@ -226,15 +317,23 @@ footer aside ul li a:hover
 	color: blue;
 }
 
+/* --- */
+
+/* Anker General Styling */
+
 a
 {
-	color: pink;
+	color: black;
 }
 
 a:hover
 {
-	color: black;
+	color: pink;
 }
+
+/* --- */
+
+/* Optimisation Try */
 
 @media (max-width: 400px)
 {
