--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,6 +5,11 @@
 float: left;
 }
 
+.bold
+{
+	font-weight: bold;
+}
+
 .para1
 {
 float: right;
@@ -34,7 +39,7 @@ text-decoration: underline;
 
 .nounderline
 {
-list-style: none;
+	text-decoration: none;
 }
 
 .center
@@ -107,11 +112,115 @@ list-style: none;
 	color: white;
 }
 
+.main
+{
+	border-top: 1px solid black;
+}
+
+.footer-ul-1
+{
+	margin-left: 57px;
+	margin-right: 57px;
+}
+
+.footer-ul-2
+{
+	border-top: none; 
+	margin-left: 310px;
+	margin-right: 310px;
+}
 /* --- */
 
 /* ID Tag Classes */
 
+#logo
+{
+	top: 63px;
+	left: 250px;
+	width: 170px;
+	height: 59px;
+	position: fixed;
+}
 
+#mugshot
+{
+	width: 170px; 
+	height: 200px; 
+	margin-right: 10px;
+}
+
+#div-keyboard
+{
+	width: 400px; 
+	left: 595px; 
+	position: absolute; 
+	z-index: -1;
+}
+
+#keyboard
+{
+	width: 300px; 
+	height: 400px; 
+	transform: rotate(270deg);
+}
+
+#index-article
+{
+	padding-top: 350px;
+}
+
+#motivation-header
+{
+	border-top: solid 1px black; 
+	padding-top: 20px;
+}
+
+#profile-david-img
+{
+	width: 170px; 
+	height: 200px; 
+	margin-right: 10px;
+}
+
+#profile-h2
+{
+	float: left;
+}
+
+#div-processbar
+{
+	padding-top: 10px; text-align: center;
+}
+
+#div-table
+{
+	border-top: 1px solid black;
+	padding-top: 20px;
+}
+#blog-h3
+{
+	font-size: 20px;
+}
+
+#faq-main
+{
+	padding-top: 3px;
+}
+
+#safari-p 
+{
+	font-size: 10px;
+}
+
+#programming-yes
+{
+	font-size: 550px; font-style: bold; text-align: center;
+}
+
+#section-article-img
+{
+	width: 100%; height: 400px;
+}
 
 /* --- */
 
@@ -166,7 +275,7 @@ progress[value]::-webkit-progress-bar /* -webkit-progress-bar = (the container) 
 progress[value]::-webkit-progress-value 
 {
 	border-radius: 5px;
-	background-color: black;
+	background-color: pink;  
 }
 
 /* --- */
