--- a/stylesheet.css
+++ b/stylesheet.css
@@ -93,11 +93,6 @@ text-decoration: underline;
 	float: right;
 }
 
-.back-li
-{
-	
-}
-
 .back-a
 {
 	background-color: #000000;
@@ -112,23 +107,6 @@ text-decoration: underline;
 	color: white;
 }
 
-.main
-{
-	border-top: 1px solid black;
-}
-
-.footer-ul-1
-{
-	margin-left: 57px;
-	margin-right: 57px;
-}
-
-.footer-ul-2
-{
-	border-top: none; 
-	margin-left: 310px;
-	margin-right: 310px;
-}
 /* --- */
 
 /* ID Tag Classes */
@@ -220,6 +198,11 @@ text-decoration: underline;
 #section-article-img
 {
 	width: 100%; height: 400px;
+}
+
+#dashboard-progress-label
+{
+	color: white;
 }
 
 /* --- */
@@ -383,7 +366,7 @@ td
 
 /* --- */
 
-/* Main Content Styling */
+/* Main Content Styling */ 
 
 main article ul li a 
 {
@@ -393,6 +376,11 @@ main article ul li a
 main article ul li a:hover
 {
 	color: pink;
+}
+
+.main
+{
+	border-top: 1px solid black;
 }
 
 /* --- */
@@ -424,6 +412,19 @@ footer aside ul li a
 footer aside ul li a:hover
 {
 	color: blue;
+}
+
+.footer-ul-1
+{
+	margin-left: 57px;
+	margin-right: 57px;
+}
+
+.footer-ul-2
+{
+	border-top: none; 
+	margin-left: 310px;
+	margin-right: 310px;
 }
 
 /* --- */
